before gif management

--- a/beamer_reports/beamer.tex
+++ b/beamer_reports/beamer.tex
@@ -123,15 +123,27 @@
             \item 2 proofs, 1 with use of score along eigenvectors, 1 with use of covariance and linear separability
         \end{itemize}
         
+
+
+
         \begin{center}
             \fbox{\parbox{0.8\textwidth}{
                 \centering
                 \vspace{2cm}
-                [Image: t_c animation with real images]
+                [Image: $t_s$ animation with mnist classes]
                 \vspace{2cm}
             }}
         \end{center}
         
+
+
+
+
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Goal}
+
         \begin{itemize}
             \item $t_c$: Critical time for image selection
         \end{itemize}
