--- a/beamer_reports/beamer.tex
+++ b/beamer_reports/beamer.tex
@@ -207,7 +207,7 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: Class separation visualization]
+            [Image: Class separation visualization with 2d gaussians and alpha gif]
             \vspace{2cm}
         }}
     \end{center}
@@ -245,7 +245,7 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: MNIST Linear accuracy as a function of time + theoretical predictions (with integral of erfc(x) + empirical potential given centroids ]
+            [Image: TODO MNIST Linear accuracy as a function of time + theoretical predictions (with integral of erfc(x) + empirical potential given centroids ]
             \vspace{2cm}
         }}
     \end{center}
@@ -274,7 +274,7 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: CIFAR 2 images separation visualization]
+            [Image: TODO CIFAR 2 images separation visualization]
             \vspace{2cm}
         }}
     \end{center}
@@ -300,12 +300,14 @@
             t_c \approx \frac{1}{2}\log\left[1+\frac{\sigma^2}{n^{2/d}-1}\right] \approx \frac{d}{\log n}
         \end{equation}
     \end{itemize}
-    
+\end{frame}
+
+\begin{frame}{Critical Collapse Time ($t_c$)}
     \begin{center}
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: Collapse visualization of stopping between 2 images with CIFAR]
+            [Image: TODO Collapse visualization of stopping between 2 images with CIFAR]
             \vspace{2cm}
         }}
     \end{center}
@@ -322,7 +324,7 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: Collapse visualization of stopping when near but not exactly on a 2D point]
+            [Image: TODO Collapse visualization of stopping when near but not exactly on a 2D point]
             \vspace{2cm}
         }}
     \end{center}
@@ -350,7 +352,21 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: MNIST or CIFAR 2 images separation visualization]
+            [Image: 2d gif already made]
+            \vspace{2cm}
+        }}
+    \end{center}
+\end{frame}
+
+
+%% 1 minute
+\begin{frame}{The Volumetric Argument}
+    
+    \begin{center}
+        \fbox{\parbox{0.8\textwidth}{
+            \centering
+            \vspace{2cm}
+            [Image: TODO MNIST or CIFAR 2 images separation visualization]
             \vspace{2cm}
         }}
     \end{center}
@@ -395,32 +411,11 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: Hierarchical visualization with hierarchical tikz + calculations]
+            [Image: DONE Hierarchical visualization with hierarchical tikz + calculations]
             \vspace{2cm}
         }}
     \end{center}
 \end{frame}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -440,7 +435,7 @@
         \fbox{\parbox{0.8\textwidth}{
             \centering
             \vspace{2cm}
-            [Image: Better viz from the paper in tikz, with true generated data]
+            [Image: TODO with mathcha.iom Better viz from the paper in tikz, with true generated images and a manifold]
             \vspace{2cm}
         }}
     \end{center}
