--- a/beamer_reports/recap_tikz.tex
+++ b/beamer_reports/recap_tikz.tex
@@ -38,17 +38,18 @@
         }
     }
 
-    % Encarts pour les coupes aux extrémités (T=0 et T=8)
-    % T=0
-    \begin{scope}[canvas is yz plane at x=0]
-        \draw[dashed] (-1.5,0) rectangle (1.5,2);
-        \node[perspective image=1] at (0,1) {\includegraphics[width=2.7cm,height=1.8cm]{mixture.png}};
+    % Encarts pour les coupes aux extrémités (T=0 et T=8) - maintenant centrés sur l'axe temporel
+    % T=0 (background)
+    \begin{scope}[canvas is yz plane at x=0,on background layer]
+        % Rectangle centré sur l'axe temporel
+        %\draw[dashed] (-5,-5) rectangle (5,5);
+        \node[perspective image=0] at (0,0) {\includegraphics[width=5cm,height=3cm]{mixture.png}};
     \end{scope}
-    
-    % T=8
-    \begin{scope}[canvas is yz plane at x=8]
-        \draw[dashed] (-1.5,0) rectangle (1.5,2);
-        \node[perspective image=1] at (0,1) {\includegraphics[width=2.7cm,height=1.8cm]{gaussian.png}};
+    % T=8 (background)
+    \begin{scope}[canvas is yz plane at x=8,on background layer]
+        % Rectangle centré sur l'axe temporel
+        %\draw[dashed] (-5,-5) rectangle (5,5);
+        \node[perspective image=0] at (0,0) {\includegraphics[width=5cm,height=4cm,opacity=0.2]{gaussian.png}};
     \end{scope}
 
     % Encarts pour les coupes (y,z) - maintenant divisés en y+ et y-
