--- a/beamer_reports/recap_tikz.tex
+++ b/beamer_reports/recap_tikz.tex
@@ -20,10 +20,10 @@
     \draw (2,0,0.1) -- (2,0,-0.1) node[below] {$t_c$};
     \draw (0,0,0.1) -- (0,0,-0.1) node[below] {$T=0$};
     
-    % Zones de régimes colorées
-    \fill[blue!20,opacity=0.3] (8,-2,0) -- (8,2,0) -- (5,2,0) -- (5,-2,0) -- cycle; % Régime III
-    \fill[green!20,opacity=0.3] (5,-2,0) -- (5,2,0) -- (2,2,0) -- (2,-2,0) -- cycle; % Régime II
-    \fill[red!20,opacity=0.3] (2,-2,0) -- (2,2,0) -- (0,2,0) -- (0,-2,0) -- cycle; % Régime I
+    % Zones de régimes colorées - diviser y par 2
+    \fill[blue!20,opacity=0.3] (8,-1,0) -- (8,1,0) -- (5,1,0) -- (5,-1,0) -- cycle; % Régime III
+    \fill[green!20,opacity=0.3] (5,-1,0) -- (5,1,0) -- (2,1,0) -- (2,-1,0) -- cycle; % Régime II
+    \fill[red!20,opacity=0.3] (2,-1,0) -- (2,1,0) -- (0,1,0) -- (0,-1,0) -- cycle; % Régime I
     
     % Labels des régimes
     \node[above] at (6.5,0,0) {Régime III};
@@ -38,181 +38,181 @@
         }
     }
 
-    % Encarts pour les coupes aux extrémités (T=0 et T=8) - maintenant centrés sur l'axe temporel
+    % Encarts pour les coupes aux extrémités (T=0 et T=8) - tailles divisées par 2
     % T=0 (background)
     \begin{scope}[canvas is yz plane at x=0,on background layer]
         % Rectangle centré sur l'axe temporel
         %\draw[dashed] (-5,-5) rectangle (5,5);
-        \node[perspective image=0] at (0,0) {\includegraphics[width=5cm,height=3cm]{mixture.png}};
+        \node[perspective image=0] at (0,0) {\includegraphics[width=2.5cm,height=1.5cm]{mixture.png}};
     \end{scope}
     % T=8 (background)
     \begin{scope}[canvas is yz plane at x=8,on background layer]
         % Rectangle centré sur l'axe temporel
         %\draw[dashed] (-5,-5) rectangle (5,5);
-        \node[perspective image=0] at (0,0) {\includegraphics[width=5cm,height=4cm,opacity=0.2]{gaussian.png}};
+        \node[perspective image=0] at (0,0) {\includegraphics[width=2.5cm,height=2cm,opacity=0.2]{gaussian.png}};
     \end{scope}
 
-    % Encarts pour les coupes (y,z) - maintenant divisés en y+ et y-
+    % Encarts pour les coupes (y,z) - diviser les dimensions par 2
     % Régime I - y positif
     \begin{scope}[canvas is yz plane at x=1]
-        \draw[dashed] (0,0) rectangle (1.5,2);
-        \node[anchor=south west, font=\tiny] at (0.75,2) {$y>0$};
-        \node[perspective image=1] at (0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime1_pos.png}};
+        \draw[dashed] (0,0) rectangle (0.75,1);
+        \node[anchor=south west, font=\tiny] at (0.375,1) {$y>0$};
+        \node[perspective image=0.5] at (0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime1_pos.png}};
     \end{scope}
     
     % Régime I - y négatif
     \begin{scope}[canvas is yz plane at x=1]
-        \draw[dashed] (-1.5,0) rectangle (0,2);
-        \node[anchor=north west, font=\tiny] at (-0.75,2) {$y<0$};
-        \node[perspective image=1] at (-0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime1_neg.png}};
+        \draw[dashed] (-0.75,0) rectangle (0,1);
+        \node[anchor=north west, font=\tiny] at (-0.375,1) {$y<0$};
+        \node[perspective image=0.5] at (-0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime1_neg.png}};
     \end{scope}
     
     % Régime II - y positif
     \begin{scope}[canvas is yz plane at x=3.5]
-        \draw[dashed] (0,0) rectangle (1.5,2);
-        \node[anchor=south west, font=\tiny] at (0.75,2) {$y>0$};
-        \node[perspective image=1] at (0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime2_pos.png}};
+        \draw[dashed] (0,0) rectangle (0.75,1);
+        \node[anchor=south west, font=\tiny] at (0.375,1) {$y>0$};
+        \node[perspective image=0.5] at (0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime2_pos.png}};
     \end{scope}
     
     % Régime II - y négatif
     \begin{scope}[canvas is yz plane at x=3.5]
-        \draw[dashed] (-1.5,0) rectangle (0,2);
-        \node[anchor=north west, font=\tiny] at (-0.75,2) {$y<0$};
-        \node[perspective image=1] at (-0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime2_neg.png}};
+        \draw[dashed] (-0.75,0) rectangle (0,1);
+        \node[anchor=north west, font=\tiny] at (-0.375,1) {$y<0$};
+        \node[perspective image=0.5] at (-0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime2_neg.png}};
     \end{scope}
     
     % Régime III - y positif
     \begin{scope}[canvas is yz plane at x=7]
-        \draw[dashed] (0,0) rectangle (1.5,2);
-        \node[anchor=south west, font=\tiny] at (0.75,2) {$y>0$};
-        \node[perspective image=1] at (0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime3_pos.png}};
+        \draw[dashed] (0,0) rectangle (0.75,1);
+        \node[anchor=south west, font=\tiny] at (0.375,1) {$y>0$};
+        \node[perspective image=0.5] at (0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime3_pos.png}};
     \end{scope}
     
     % Régime III - y négatif
     \begin{scope}[canvas is yz plane at x=7]
-        \draw[dashed] (-1.5,0) rectangle (0,2);
-        \node[anchor=north west, font=\tiny] at (-0.75,2) {$y<0$};
-        \node[perspective image=1] at (-0.75,1) {\includegraphics[width=1.3cm,height=1.7cm]{regime3_neg.png}};
+        \draw[dashed] (-0.75,0) rectangle (0,1);
+        \node[anchor=north west, font=\tiny] at (-0.375,1) {$y<0$};
+        \node[perspective image=0.5] at (-0.375,0.5) {\includegraphics[width=0.65cm,height=0.85cm]{regime3_neg.png}};
     \end{scope}
 
-    % Trajectoire 1 (rouge)
+    % Trajectoire 1 (rouge) - diviser y et z par 2
     \draw[red,opacity=0.4] plot coordinates {
-        (0,-1.593,-1.687) (0.08,-1.556,-1.601) (0.16,-1.569,-1.614) (0.24,-1.480,-1.571)
-        (0.32,-1.506,-1.540) (0.40,-1.533,-1.567) (0.48,-1.519,-1.675) (0.56,-1.617,-1.707)
-        (0.64,-1.674,-1.689) (0.72,-1.725,-1.769) (0.80,-1.642,-1.782) (0.88,-1.638,-1.862)
-        (0.96,-1.669,-1.856) (1.04,-1.734,-1.835) (1.12,-1.768,-1.851) (1.20,-1.802,-1.746)
-        (1.28,-1.803,-1.806) (1.36,-1.757,-1.875) (1.44,-1.745,-1.986) (1.52,-1.820,-1.975)
-        (1.60,-1.778,-1.965) (1.68,-1.785,-1.982) (1.76,-1.868,-2.023) (1.84,-1.894,-1.963)
-        (1.92,-1.875,-2.063) (2.00,-1.857,-2.085) (2.08,-1.895,-2.050) (2.16,-1.837,-1.997)
-        (2.24,-1.884,-2.015) (2.32,-1.865,-1.960) (2.40,-1.892,-1.970) (2.48,-1.955,-2.038)
-        (2.56,-1.909,-1.961) (2.64,-1.913,-1.904) (2.72,-1.893,-1.941) (2.80,-1.872,-1.854)
-        (2.88,-1.874,-1.765) (2.96,-2.022,-1.719) (3.04,-2.018,-1.736) (3.12,-2.012,-1.848)
-        (3.20,-2.025,-1.828) (3.28,-1.941,-1.857) (3.36,-1.987,-1.886) (3.44,-1.935,-1.867)
-        (3.52,-1.965,-1.838) (3.60,-1.960,-1.783) (3.68,-1.999,-1.802) (3.76,-2.022,-1.885)
-        (3.84,-2.005,-1.870) (3.92,-2.004,-1.883) (4.00,-2.085,-1.907) (4.08,-2.104,-1.952)
-        (4.16,-2.113,-1.929) (4.24,-2.006,-1.920) (4.32,-1.992,-1.924) (4.40,-2.100,-1.925)
-        (4.48,-2.097,-1.786) (4.56,-2.108,-1.769) (4.64,-2.110,-1.835) (4.72,-2.045,-1.792)
-        (4.80,-2.000,-1.844) (4.88,-1.921,-1.923) (4.96,-1.888,-1.799) (5.04,-1.944,-1.831)
-        (5.12,-1.938,-1.860) (5.20,-2.026,-1.856) (5.28,-2.086,-1.829) (5.36,-2.138,-1.741)
-        (5.44,-2.182,-1.760) (5.52,-2.136,-1.829) (5.60,-2.123,-1.755) (5.68,-2.214,-1.745)
-        (5.76,-2.200,-1.701) (5.84,-2.270,-1.775) (5.92,-2.240,-1.759) (6.00,-2.226,-1.739)
-        (6.08,-2.264,-1.726) (6.16,-2.248,-1.766) (6.24,-2.142,-1.739) (6.32,-2.210,-1.702)
-        (6.40,-2.265,-1.658) (6.48,-2.199,-1.704) (6.56,-2.145,-1.681) (6.64,-2.098,-1.574)
-        (6.72,-2.112,-1.616) (6.80,-2.162,-1.662) (6.88,-2.167,-1.643) (6.96,-2.151,-1.596)
-        (7.04,-2.150,-1.514) (7.12,-2.165,-1.360) (7.20,-2.130,-1.409) (7.28,-2.191,-1.381)
-        (7.36,-2.203,-1.341) (7.44,-2.176,-1.345) (7.52,-2.224,-1.431) (7.60,-2.250,-1.382)
-        (7.68,-2.238,-1.453) (7.76,-2.228,-1.431) (7.84,-2.278,-1.422) (7.92,-2.274,-1.487)
+        (0,-0.797,-0.844) (0.08,-0.778,-0.801) (0.16,-0.785,-0.807) (0.24,-0.740,-0.786)
+        (0.32,-0.753,-0.770) (0.40,-0.767,-0.784) (0.48,-0.760,-0.838) (0.56,-0.809,-0.854)
+        (0.64,-0.837,-0.845) (0.72,-0.863,-0.885) (0.80,-0.821,-0.891) (0.88,-0.819,-0.931)
+        (0.96,-0.835,-0.928) (1.04,-0.867,-0.918) (1.12,-0.884,-0.926) (1.20,-0.901,-0.873)
+        (1.28,-0.902,-0.903) (1.36,-0.879,-0.938) (1.44,-0.873,-0.993) (1.52,-0.910,-0.988)
+        (1.60,-0.889,-0.983) (1.68,-0.893,-0.991) (1.76,-0.934,-1.012) (1.84,-0.947,-0.982)
+        (1.92,-0.938,-1.032) (2.00,-0.929,-1.043) (2.08,-0.948,-1.025) (2.16,-0.919,-0.999)
+        (2.24,-0.942,-1.008) (2.32,-0.933,-0.980) (2.40,-0.946,-0.985) (2.48,-0.978,-1.019)
+        (2.56,-0.955,-0.981) (2.64,-0.957,-0.952) (2.72,-0.947,-0.971) (2.80,-0.936,-0.927)
+        (2.88,-0.937,-0.883) (2.96,-1.011,-0.860) (3.04,-1.009,-0.868) (3.12,-1.006,-0.924)
+        (3.20,-1.013,-0.914) (3.28,-0.971,-0.929) (3.36,-0.994,-0.943) (3.44,-0.968,-0.934)
+        (3.52,-0.983,-0.919) (3.60,-0.980,-0.892) (3.68,-1.000,-0.901) (3.76,-1.011,-0.943)
+        (3.84,-1.003,-0.935) (3.92,-1.002,-0.942) (4.00,-1.043,-0.954) (4.08,-1.052,-0.976)
+        (4.16,-1.057,-0.965) (4.24,-1.003,-0.960) (4.32,-0.996,-0.962) (4.40,-1.050,-0.963)
+        (4.48,-1.049,-0.893) (4.56,-1.054,-0.885) (4.64,-1.055,-0.918) (4.72,-1.023,-0.896)
+        (4.80,-1.000,-0.922) (4.88,-0.961,-0.962) (4.96,-0.944,-0.900) (5.04,-0.972,-0.916)
+        (5.12,-0.969,-0.930) (5.20,-1.013,-0.928) (5.28,-1.043,-0.915) (5.36,-1.069,-0.871)
+        (5.44,-1.091,-0.880) (5.52,-1.068,-0.915) (5.60,-1.062,-0.878) (5.68,-1.107,-0.873)
+        (5.76,-1.100,-0.851) (5.84,-1.135,-0.888) (5.92,-1.120,-0.880) (6.00,-1.113,-0.870)
+        (6.08,-1.132,-0.863) (6.16,-1.124,-0.883) (6.24,-1.071,-0.870) (6.32,-1.105,-0.851)
+        (6.40,-1.133,-0.829) (6.48,-1.100,-0.852) (6.56,-1.073,-0.841) (6.64,-1.049,-0.787)
+        (6.72,-1.056,-0.808) (6.80,-1.081,-0.831) (6.88,-1.084,-0.822) (6.96,-1.076,-0.798)
+        (7.04,-1.075,-0.757) (7.12,-1.083,-0.680) (7.20,-1.065,-0.705) (7.28,-1.096,-0.691)
+        (7.36,-1.102,-0.671) (7.44,-1.088,-0.673) (7.52,-1.112,-0.716) (7.60,-1.125,-0.691)
+        (7.68,-1.119,-0.727) (7.76,-1.114,-0.716) (7.84,-1.139,-0.711) (7.92,-1.137,-0.744)
     };
 
-    % Trajectoire 2 (bleu)
+    % Trajectoire 2 (bleu) - diviser y et z par 2
     \draw[blue,opacity=0.4] plot coordinates {
-        (0,-1.613,-1.583) (0.08,-1.552,-1.523) (0.16,-1.630,-1.577) (0.24,-1.601,-1.547)
-        (0.32,-1.572,-1.330) (0.40,-1.539,-1.265) (0.48,-1.485,-1.228) (0.56,-1.503,-1.185)
-        (0.64,-1.547,-1.199) (0.72,-1.574,-1.194) (0.80,-1.444,-1.300) (0.88,-1.405,-1.391)
-        (0.96,-1.431,-1.330) (1.04,-1.428,-1.390) (1.12,-1.468,-1.352) (1.20,-1.510,-1.340)
-        (1.28,-1.507,-1.377) (1.36,-1.386,-1.341) (1.44,-1.500,-1.330) (1.52,-1.538,-1.282)
-        (1.60,-1.583,-1.289) (1.68,-1.554,-1.240) (1.76,-1.622,-1.258) (1.84,-1.649,-1.295)
-        (1.92,-1.549,-1.273) (2.00,-1.620,-1.221) (2.08,-1.500,-1.162) (2.16,-1.586,-1.190)
-        (2.24,-1.514,-1.230) (2.32,-1.489,-1.186) (2.40,-1.542,-1.189) (2.48,-1.725,-1.247)
-        (2.56,-1.739,-1.318) (2.64,-1.647,-1.399) (2.72,-1.672,-1.391) (2.80,-1.590,-1.472)
-        (2.88,-1.525,-1.472) (2.96,-1.580,-1.446) (3.04,-1.569,-1.480) (3.12,-1.565,-1.501)
-        (3.20,-1.558,-1.464) (3.28,-1.469,-1.534) (3.36,-1.348,-1.644) (3.44,-1.357,-1.611)
-        (3.52,-1.341,-1.646) (3.60,-1.353,-1.674) (3.68,-1.386,-1.626) (3.76,-1.366,-1.665)
-        (3.84,-1.315,-1.648) (3.92,-1.269,-1.612) (4.00,-1.316,-1.644) (4.08,-1.273,-1.610)
-        (4.16,-1.275,-1.603) (4.24,-1.202,-1.636) (4.32,-1.171,-1.648) (4.40,-1.184,-1.586)
-        (4.48,-1.137,-1.540) (4.56,-1.063,-1.538) (4.64,-1.025,-1.556) (4.72,-1.006,-1.563)
-        (4.80,-1.001,-1.530) (4.88,-1.047,-1.411) (4.96,-1.104,-1.480) (5.04,-1.038,-1.435)
-        (5.12,-1.003,-1.400) (5.20,-1.004,-1.450) (5.28,-1.000,-1.489) (5.36,-0.944,-1.497)
-        (5.44,-0.991,-1.515) (5.52,-0.968,-1.547) (5.60,-1.014,-1.533) (5.68,-1.000,-1.562)
-        (5.76,-1.027,-1.549) (5.84,-1.109,-1.629) (5.92,-1.150,-1.641) (6.00,-1.132,-1.557)
-        (6.08,-1.084,-1.566) (6.16,-1.085,-1.623) (6.24,-1.086,-1.639) (6.32,-1.067,-1.686)
-        (6.40,-1.038,-1.599) (6.48,-1.044,-1.577) (6.56,-1.005,-1.599) (6.64,-0.992,-1.599)
-        (6.72,-0.987,-1.642) (6.80,-0.986,-1.614) (6.88,-0.903,-1.560) (6.96,-0.782,-1.603)
-        (7.04,-0.732,-1.593) (7.12,-0.608,-1.639) (7.20,-0.656,-1.673) (7.28,-0.776,-1.702)
-        (7.36,-0.819,-1.694) (7.44,-0.800,-1.588) (7.52,-0.746,-1.620) (7.60,-0.797,-1.592)
-        (7.68,-0.871,-1.489) (7.76,-0.805,-1.515) (7.84,-0.902,-1.439) (7.92,-0.908,-1.369)
+        (0,-0.807,-0.792) (0.08,-0.776,-0.762) (0.16,-0.815,-0.789) (0.24,-0.801,-0.774)
+        (0.32,-0.786,-0.665) (0.40,-0.770,-0.633) (0.48,-0.743,-0.614) (0.56,-0.752,-0.593)
+        (0.64,-0.774,-0.600) (0.72,-0.787,-0.597) (0.80,-0.722,-0.650) (0.88,-0.703,-0.696)
+        (0.96,-0.716,-0.665) (1.04,-0.714,-0.695) (1.12,-0.734,-0.676) (1.20,-0.755,-0.670)
+        (1.28,-0.754,-0.689) (1.36,-0.693,-0.671) (1.44,-0.750,-0.665) (1.52,-0.769,-0.641)
+        (1.60,-0.792,-0.645) (1.68,-0.777,-0.620) (1.76,-0.811,-0.629) (1.84,-0.825,-0.648)
+        (1.92,-0.775,-0.637) (2.00,-0.810,-0.611) (2.08,-0.750,-0.581) (2.16,-0.793,-0.595)
+        (2.24,-0.757,-0.615) (2.32,-0.745,-0.593) (2.40,-0.771,-0.595) (2.48,-0.863,-0.624)
+        (2.56,-0.870,-0.659) (2.64,-0.824,-0.700) (2.72,-0.836,-0.696) (2.80,-0.795,-0.736)
+        (2.88,-0.763,-0.736) (2.96,-0.790,-0.723) (3.04,-0.785,-0.740) (3.12,-0.783,-0.751)
+        (3.20,-0.779,-0.732) (3.28,-0.735,-0.767) (3.36,-0.674,-0.822) (3.44,-0.679,-0.806)
+        (3.52,-0.671,-0.823) (3.60,-0.677,-0.837) (3.68,-0.693,-0.813) (3.76,-0.683,-0.833)
+        (3.84,-0.658,-0.824) (3.92,-0.635,-0.806) (4.00,-0.658,-0.822) (4.08,-0.637,-0.805)
+        (4.16,-0.638,-0.802) (4.24,-0.601,-0.818) (4.32,-0.586,-0.824) (4.40,-0.592,-0.793)
+        (4.48,-0.569,-0.770) (4.56,-0.532,-0.769) (4.64,-0.513,-0.778) (4.72,-0.503,-0.782)
+        (4.80,-0.501,-0.765) (4.88,-0.524,-0.706) (4.96,-0.552,-0.740) (5.04,-0.519,-0.718)
+        (5.12,-0.502,-0.700) (5.20,-0.502,-0.725) (5.28,-0.500,-0.745) (5.36,-0.472,-0.749)
+        (5.44,-0.496,-0.758) (5.52,-0.484,-0.774) (5.60,-0.507,-0.767) (5.68,-0.500,-0.781)
+        (5.76,-0.514,-0.775) (5.84,-0.555,-0.815) (5.92,-0.575,-0.821) (6.00,-0.566,-0.779)
+        (6.08,-0.542,-0.783) (6.16,-0.543,-0.812) (6.24,-0.543,-0.820) (6.32,-0.534,-0.843)
+        (6.40,-0.519,-0.800) (6.48,-0.522,-0.789) (6.56,-0.503,-0.800) (6.64,-0.496,-0.800)
+        (6.72,-0.494,-0.821) (6.80,-0.493,-0.807) (6.88,-0.452,-0.780) (6.96,-0.391,-0.802)
+        (7.04,-0.366,-0.797) (7.12,-0.304,-0.820) (7.20,-0.328,-0.837) (7.28,-0.388,-0.851)
+        (7.36,-0.410,-0.847) (7.44,-0.400,-0.794) (7.52,-0.373,-0.810) (7.60,-0.399,-0.796)
+        (7.68,-0.436,-0.745) (7.76,-0.403,-0.758) (7.84,-0.451,-0.720) (7.92,-0.454,-0.685)
     };
 
-    % Trajectoire 3 (vert)
+    % Trajectoire 3 (vert) - diviser y et z par 2
     \draw[green,opacity=0.4] plot coordinates {
-        (0,1.429,1.577) (0.08,1.429,1.580) (0.16,1.404,1.615) (0.24,1.343,1.607)
-        (0.32,1.350,1.636) (0.40,1.390,1.573) (0.48,1.304,1.645) (0.56,1.323,1.603)
-        (0.64,1.410,1.609) (0.72,1.477,1.613) (0.80,1.594,1.712) (0.88,1.579,1.767)
-        (0.96,1.616,1.845) (1.04,1.561,1.883) (1.12,1.621,1.784) (1.20,1.554,1.669)
-        (1.28,1.539,1.709) (1.36,1.624,1.713) (1.44,1.716,1.635) (1.52,1.620,1.632)
-        (1.60,1.642,1.630) (1.68,1.525,1.625) (1.76,1.451,1.663) (1.84,1.472,1.610)
-        (1.92,1.442,1.550) (2.00,1.439,1.604) (2.08,1.383,1.633) (2.16,1.353,1.588)
-        (2.24,1.347,1.529) (2.32,1.316,1.461) (2.40,1.427,1.463) (2.48,1.387,1.476)
-        (2.56,1.381,1.463) (2.64,1.416,1.506) (2.72,1.386,1.473) (2.80,1.370,1.343)
-        (2.88,1.284,1.420) (2.96,1.378,1.406) (3.04,1.410,1.424) (3.12,1.584,1.487)
-        (3.20,1.577,1.433) (3.28,1.486,1.445) (3.36,1.443,1.364) (3.44,1.407,1.303)
-        (3.52,1.502,1.353) (3.60,1.502,1.437) (3.68,1.506,1.388) (3.76,1.592,1.418)
-        (3.84,1.534,1.408) (3.92,1.484,1.329) (4.00,1.537,1.437) (4.08,1.457,1.469)
-        (4.16,1.421,1.442) (4.24,1.387,1.393) (4.32,1.390,1.346) (4.40,1.405,1.343)
-        (4.48,1.392,1.292) (4.56,1.359,1.334) (4.64,1.387,1.279) (4.72,1.393,1.322)
-        (4.80,1.299,1.352) (4.88,1.261,1.385) (4.96,1.218,1.283) (5.04,1.126,1.285)
-        (5.12,1.140,1.234) (5.20,1.177,1.140) (5.28,1.173,1.072) (5.36,1.136,1.074)
-        (5.44,1.087,1.053) (5.52,1.144,1.020) (5.60,1.192,0.956) (5.68,1.222,1.038)
-        (5.76,1.082,0.992) (5.84,1.114,0.981) (5.92,1.135,0.947) (6.00,1.140,0.938)
-        (6.08,1.206,0.952) (6.16,1.225,0.929) (6.24,1.198,0.905) (6.32,1.220,0.881)
-        (6.40,1.237,0.998) (6.48,1.286,0.980) (6.56,1.354,0.957) (6.64,1.238,0.900)
-        (6.72,1.133,0.880) (6.80,1.134,0.975) (6.88,1.152,0.962) (6.96,1.199,0.837)
-        (7.04,1.212,0.881) (7.12,1.129,0.945) (7.20,1.148,0.922) (7.28,1.184,1.050)
-        (7.36,1.194,1.064) (7.44,1.168,1.016) (7.52,1.215,0.968) (7.60,1.219,0.941)
-        (7.68,1.246,0.960) (7.76,1.305,0.931) (7.84,1.290,0.876) (7.92,1.264,0.897)
+        (0,0.715,0.789) (0.08,0.715,0.790) (0.16,0.702,0.808) (0.24,0.672,0.804)
+        (0.32,0.675,0.818) (0.40,0.695,0.787) (0.48,0.652,0.823) (0.56,0.662,0.802)
+        (0.64,0.705,0.805) (0.72,0.739,0.807) (0.80,0.797,0.856) (0.88,0.790,0.884)
+        (0.96,0.808,0.923) (1.04,0.781,0.942) (1.12,0.811,0.892) (1.20,0.777,0.835)
+        (1.28,0.770,0.855) (1.36,0.812,0.857) (1.44,0.858,0.818) (1.52,0.810,0.816)
+        (1.60,0.821,0.815) (1.68,0.763,0.813) (1.76,0.726,0.832) (1.84,0.736,0.805)
+        (1.92,0.721,0.775) (2.00,0.720,0.802) (2.08,0.692,0.817) (2.16,0.677,0.794)
+        (2.24,0.674,0.765) (2.32,0.658,0.731) (2.40,0.714,0.732) (2.48,0.694,0.738)
+        (2.56,0.691,0.732) (2.64,0.708,0.753) (2.72,0.693,0.737) (2.80,0.685,0.672)
+        (2.88,0.642,0.710) (2.96,0.689,0.703) (3.04,0.705,0.712) (3.12,0.792,0.744)
+        (3.20,0.789,0.717) (3.28,0.743,0.723) (3.36,0.722,0.682) (3.44,0.704,0.652)
+        (3.52,0.751,0.677) (3.60,0.751,0.719) (3.68,0.753,0.694) (3.76,0.796,0.709)
+        (3.84,0.767,0.704) (3.92,0.742,0.665) (4.00,0.769,0.719) (4.08,0.729,0.735)
+        (4.16,0.711,0.721) (4.24,0.694,0.697) (4.32,0.695,0.673) (4.40,0.703,0.672)
+        (4.48,0.696,0.646) (4.56,0.680,0.667) (4.64,0.694,0.640) (4.72,0.697,0.661)
+        (4.80,0.650,0.676) (4.88,0.631,0.693) (4.96,0.609,0.642) (5.04,0.563,0.643)
+        (5.12,0.570,0.617) (5.20,0.589,0.570) (5.28,0.587,0.536) (5.36,0.568,0.537)
+        (5.44,0.544,0.527) (5.52,0.572,0.510) (5.60,0.596,0.478) (5.68,0.611,0.519)
+        (5.76,0.541,0.496) (5.84,0.557,0.491) (5.92,0.568,0.474) (6.00,0.570,0.469)
+        (6.08,0.603,0.476) (6.16,0.613,0.465) (6.24,0.599,0.453) (6.32,0.610,0.441)
+        (6.40,0.619,0.499) (6.48,0.643,0.490) (6.56,0.677,0.479) (6.64,0.619,0.450)
+        (6.72,0.567,0.440) (6.80,0.567,0.488) (6.88,0.576,0.481) (6.96,0.600,0.419)
+        (7.04,0.606,0.441) (7.12,0.565,0.473) (7.20,0.574,0.461) (7.28,0.592,0.525)
+        (7.36,0.597,0.532) (7.44,0.584,0.508) (7.52,0.608,0.484) (7.60,0.610,0.471)
+        (7.68,0.623,0.480) (7.76,0.653,0.466) (7.84,0.645,0.438) (7.92,0.632,0.449)
     };
 
-    % Trajectoire 4 (violet)
+    % Trajectoire 4 (violet) - diviser y et z par 2
     \draw[violet,opacity=0.4] plot coordinates {
-        (0,1.780,1.529) (0.08,1.829,1.606) (0.16,1.852,1.712) (0.24,1.808,1.642)
-        (0.32,1.708,1.726) (0.40,1.745,1.723) (0.48,1.761,1.659) (0.56,1.899,1.667)
-        (0.64,1.905,1.708) (0.72,1.932,1.720) (0.80,1.888,1.747) (0.88,1.994,1.823)
-        (0.96,2.084,1.794) (1.04,2.028,1.787) (1.12,2.031,1.849) (1.20,1.936,1.936)
-        (1.28,1.927,1.912) (1.36,1.869,1.818) (1.44,1.916,1.822) (1.52,1.843,1.749)
-        (1.60,1.824,1.843) (1.68,1.809,1.758) (1.76,1.795,1.743) (1.84,1.643,1.740)
-        (1.92,1.630,1.779) (2.00,1.734,1.843) (2.08,1.719,1.780) (2.16,1.865,1.784)
-        (2.24,1.866,1.782) (2.32,1.877,1.774) (2.40,1.844,1.743) (2.48,1.842,1.712)
-        (2.56,1.802,1.718) (2.64,1.788,1.803) (2.72,1.638,1.865) (2.80,1.708,1.748)
-        (2.88,1.689,1.727) (2.96,1.609,1.683) (3.04,1.546,1.782) (3.12,1.599,1.854)
-        (3.20,1.640,1.790) (3.28,1.610,1.818) (3.36,1.541,1.858) (3.44,1.528,1.837)
-        (3.52,1.568,1.862) (3.60,1.548,1.928) (3.68,1.486,1.962) (3.76,1.520,1.945)
-        (3.84,1.538,1.874) (3.92,1.591,1.864) (4.00,1.561,1.923) (4.08,1.521,1.843)
-        (4.16,1.433,1.878) (4.24,1.361,1.977) (4.32,1.243,2.073) (4.40,1.255,2.067)
-        (4.48,1.224,2.090) (4.56,1.222,2.152) (4.64,1.228,2.161) (4.72,1.208,2.158)
-        (4.80,1.225,2.061) (4.88,1.149,2.103) (4.96,1.159,2.093) (5.04,1.160,2.112)
-        (5.12,1.129,2.068) (5.20,1.140,2.013) (5.28,1.163,1.917) (5.36,1.222,1.943)
-        (5.44,1.236,1.999) (5.52,1.330,2.056) (5.60,1.226,1.984) (5.68,1.191,1.985)
-        (5.76,1.220,1.944) (5.84,1.231,1.902) (5.92,1.196,1.822) (6.00,1.144,1.746)
-        (6.08,1.089,1.805) (6.16,1.035,1.954) (6.24,1.063,1.964) (6.32,1.014,2.004)
-        (6.40,0.982,2.011) (6.48,1.127,2.006) (6.56,1.192,1.966) (6.64,1.190,2.066)
-        (6.72,1.154,2.168) (6.80,1.194,2.137) (6.88,1.230,2.192) (6.96,1.265,2.103)
-        (7.04,1.224,2.089) (7.12,1.220,2.124) (7.20,1.230,2.048) (7.28,1.251,2.083)
-        (7.36,1.283,2.144) (7.44,1.330,2.170) (7.52,1.326,2.076) (7.60,1.350,2.088)
-        (7.68,1.366,2.016) (7.76,1.305,2.075) (7.84,1.302,2.114) (7.92,1.304,2.115)
+        (0,0.890,0.765) (0.08,0.915,0.803) (0.16,0.926,0.856) (0.24,0.904,0.821)
+        (0.32,0.854,0.863) (0.40,0.873,0.862) (0.48,0.881,0.830) (0.56,0.950,0.834)
+        (0.64,0.953,0.854) (0.72,0.966,0.860) (0.80,0.944,0.874) (0.88,0.997,0.912)
+        (0.96,1.042,0.897) (1.04,1.014,0.894) (1.12,1.016,0.925) (1.20,0.968,0.968)
+        (1.28,0.964,0.956) (1.36,0.935,0.909) (1.44,0.958,0.911) (1.52,0.922,0.875)
+        (1.60,0.912,0.922) (1.68,0.905,0.879) (1.76,0.898,0.872) (1.84,0.822,0.870)
+        (1.92,0.815,0.890) (2.00,0.867,0.922) (2.08,0.860,0.890) (2.16,0.933,0.892)
+        (2.24,0.933,0.891) (2.32,0.939,0.887) (2.40,0.922,0.872) (2.48,0.921,0.856)
+        (2.56,0.901,0.859) (2.64,0.894,0.902) (2.72,0.819,0.933) (2.80,0.854,0.874)
+        (2.88,0.845,0.864) (2.96,0.805,0.842) (3.04,0.773,0.891) (3.12,0.800,0.927)
+        (3.20,0.820,0.895) (3.28,0.805,0.909) (3.36,0.771,0.929) (3.44,0.764,0.919)
+        (3.52,0.784,0.931) (3.60,0.774,0.964) (3.68,0.743,0.981) (3.76,0.760,0.973)
+        (3.84,0.769,0.937) (3.92,0.796,0.932) (4.00,0.781,0.962) (4.08,0.761,0.922)
+        (4.16,0.717,0.939) (4.24,0.681,0.989) (4.32,0.622,1.037) (4.40,0.628,1.034)
+        (4.48,0.612,1.045) (4.56,0.611,1.076) (4.64,0.614,1.081) (4.72,0.604,1.079)
+        (4.80,0.613,1.031) (4.88,0.575,1.052) (4.96,0.580,1.047) (5.04,0.580,1.056)
+        (5.12,0.565,1.034) (5.20,0.570,1.007) (5.28,0.582,0.959) (5.36,0.611,0.972)
+        (5.44,0.618,1.000) (5.52,0.665,1.028) (5.60,0.613,0.992) (5.68,0.596,0.993)
+        (5.76,0.610,0.972) (5.84,0.616,0.951) (5.92,0.598,0.911) (6.00,0.572,0.873)
+        (6.08,0.545,0.903) (6.16,0.518,0.977) (6.24,0.532,0.982) (6.32,0.507,1.002)
+        (6.40,0.491,1.006) (6.48,0.564,1.003) (6.56,0.596,0.983) (6.64,0.595,1.033)
+        (6.72,0.577,1.084) (6.80,0.597,1.069) (6.88,0.615,1.096) (6.96,0.633,1.052)
+        (7.04,0.612,1.045) (7.12,0.610,1.062) (7.20,0.615,1.024) (7.28,0.626,1.042)
+        (7.36,0.642,1.072) (7.44,0.665,1.085) (7.52,0.663,1.038) (7.60,0.675,1.044)
+        (7.68,0.683,1.008) (7.76,0.653,1.038) (7.84,0.651,1.057) (7.92,0.652,1.058)
     };
 
     % Légende pour expliquer les sections
-    \node[anchor=south east, align=left, font=\scriptsize] at (11,5,2) {
+    \node[anchor=south east, align=left, font=\scriptsize] at (11,2.5,1) {
         \textbf{Temps critiques:}\\
         $T=0$: Distribution initiale (mélange)\\
         $t_c$: Temps critique de collapse\\
